snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.pom.sha1
be87a407c26a17c6c146120c16188504bdb79dbc